// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/Row Should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<Flex(row)
  align="flex-start"
  justify="center"
>
  <styled.div
    align="flex-start"
    direction="row"
    justify="center"
  >
    <div
      className="c0"
      direction="row"
    >
      <div
        key=".0"
      >
        Hey
      </div>
      <div
        key=".1"
      >
        Oh
      </div>
      <div
        key=".2"
      >
        Lets go!
      </div>
    </div>
  </styled.div>
</Flex(row)>
`;

exports[`ui/Row Should render 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<Flex(row)
  align="flex-end"
  justify="flex-start"
>
  <styled.div
    align="flex-end"
    direction="row"
    justify="flex-start"
  >
    <div
      className="c0"
      direction="row"
    >
      <div
        key=".0"
      >
        Hey
      </div>
      <div
        key=".1"
      >
        Oh
      </div>
      <div
        key=".2"
      >
        Lets go!
      </div>
    </div>
  </styled.div>
</Flex(row)>
`;

exports[`ui/Row Should render 3`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

<Flex(row)
  align="flex-start"
  justify="space-around"
>
  <styled.div
    align="flex-start"
    direction="row"
    justify="space-around"
  >
    <div
      className="c0"
      direction="row"
    >
      <div
        key=".0"
      >
        Hey
      </div>
      <div
        key=".1"
      >
        Oh
      </div>
      <div
        key=".2"
      >
        Lets go!
      </div>
    </div>
  </styled.div>
</Flex(row)>
`;
